Se adelanta las demas view con su header y sidebar

--- a/src/layouts/Gerente/Main/Main.html
+++ b/src/layouts/Gerente/Main/Main.html
@@ -14,15 +14,19 @@
         </div>
         <nav class="Navigator--bar">
             <ul class="Navigator--bar List">
-                <a href="" class="Link">
+                <a href="../Inventario/Inventario.html" class="Link">
                     <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
-                </a><a href="" class="Link">
+                </a>
+                <a href="../Estadistica/Estadistica.html" class="Link">
                     <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
-                </a><a href="" class="Link">
+                </a>
+                <a href="../Proveedor/Proveedor.html" class="Link">
                     <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
-                </a><a href="" class="Link">
+                </a>
+                <a href="../Envios/Envios.html" class="Link">
                     <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
-                </a><a href="" class="Link">
+                </a>
+                <a href="../Avisos/Avisos.html" class="Link">
                     <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
