--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -32,5 +32,82 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="Content">
+            <form class="Inputs--seleccionados">
+                <div class="Input--Container">
+                    <input type="search" placeholder="Buscar producto">
+                    <img src="" alt="Lupa">
+                </div>
+                <div class="Input--Container">
+                    <select>
+                        <option value="Ron">Ron</option>
+                        <option value="Voodka">Voodka</option>
+                        <option value="Cerveza">Cerveza</option>
+                        <option value="Vulcana">Vulcana</option>
+                    </select>
+                </div>
+            </form>
+            <div class="icon">
+                <img src="" alt="Eliminar">
+                <img src="" alt="Modificar">
+                <img src="" alt="Añadir">
+            </div>
+        </div>
+        <div class="Table--inventario">
+            <table>
+                <caption>Inventario de Bodega</caption>
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Producto</th>
+                        <th>Fecha de Ingreso</th>
+                        <th>Cantidad de Entrada</th>
+                        <th>Precio Total</th>
+                        <th>Total</th>
+                        <th>Stock</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>Ron</td>
+                        <td>12/05/2024</td>
+                        <td>5</td>
+                        <td>35$</td>
+                        <td>45$</td>
+                        <td>1.2</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>Voodka</td>
+                        <td>11/06/2024</td>
+                        <td>7</td>
+                        <td>40$</td>
+                        <td>45$</td>
+                        <td>1.5</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>Cerveza</td>
+                        <td>24/03/2024</td>
+                        <td>10</td>
+                        <td>20$</td>
+                        <td>25$</td>
+                        <td>1.2</td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>Vulcana</td>
+                        <td>25/10/2024</td>
+                        <td>5</td>
+                        <td>35$</td>
+                        <td>45$</td>
+                        <td>1.4</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
