Se coloca los iconos que se van a utilizar en la view de inventario yse terminqa la primera parate del disñeo de la view de inventario , voy por la tabla

--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -37,7 +37,7 @@
             <form class="Inputs--seleccionados">
                 <div class="Input--Container">
                     <input type="search" placeholder="Buscar producto">
-                    <img src="" alt="Lupa">
+                    <img src="../../../../public/images/icons/Search.png" alt="Lupa">
                 </div>
                 <div class="Input--Container">
                     <select>
@@ -49,9 +49,9 @@
                 </div>
             </form>
             <div class="icon">
-                <img src="" alt="Eliminar">
-                <img src="" alt="Modificar">
-                <img src="" alt="Añadir">
+                <img src="../../../../public/images/icons/delete.png" alt="Eliminar">
+                <img src="../../../../public/images/icons/pencil.png" alt="Modificar">
+                <img src="../../../../public/images/icons/add.png" alt="Añadir">
             </div>
         </div>
         <div class="Table--inventario">
