--- a/src/layouts/Gerente/Inventario/estilo.css
+++ b/src/layouts/Gerente/Inventario/estilo.css
@@ -78,4 +78,74 @@ main{
     position: absolute;
     top: 105px;
     left: 150px;
+    border: 2px solid #000;
+    width: 80%;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    margin: auto;
+    padding: 20px;
+}
+main .Content{
+    width: 855px;
+    border: 1px solid #000;
+    margin: auto;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+}
+main .Content .Inputs--seleccionados{
+    display: flex;
+    gap: 5px;
+    border: 1px solid #000;
+    padding: 5px;
+}
+main .Content .Inputs--seleccionados .Input--Container{
+    margin-left: 0px;
+    display: flex;
+}
+main .Content .Inputs--seleccionados .Input--Container input{
+    width: 250px;
+    margin-top: 0;
+    padding: 5px 10px;
+    border: 2px solid #aaa;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1.1em;
+}
+main .Content .Inputs--seleccionados .Input--Container img{
+    width: 30px;
+    position: relative;
+    left: -35px;
+}
+main .Content .Inputs--seleccionados .Input--Container select{
+    width: 200px;
+    margin-top: 0;
+    padding: 5px 10px;
+    border: 2px solid #aaa;
+    outline: none;
+    border-radius: 5px;
+    font-size: 1.1em;
+}
+main .Content .icon{
+    display: flex;
+    margin-left: 145px;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    padding: 5px;
+    border: 1px solid #000;
+}
+main .Content .icon img{
+    width: 35px;
+    filter: drop-shadow(0 0 2px #fdfd);
+}
+main .Table--inventario{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid #000;
+    margin-top: 25px;
+    padding: 10px;
 }
