--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -60,50 +60,70 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Producto</th>
-                        <th>Fecha de Ingreso</th>
-                        <th>Cantidad de Entrada</th>
-                        <th>Precio Total</th>
-                        <th>Total</th>
-                        <th>Stock</th>
+                        <th>Nombre del Producto</th>
+                        <th>Tipo</th>
+                        <th>Litros</th>
+                        <th>Grados de alcohol</th>
+                        <th>Imagen</th>
+                        <th>Paquete</th>
+                        <th>iva</th>
+                        <th>Precio_detal</th>
+                        <th>Precio_mayorista</th>
+                        <th>stock</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
                         <td>Ron</td>
-                        <td>12/05/2024</td>
-                        <td>5</td>
-                        <td>35$</td>
-                        <td>45$</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
                         <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>Voodka</td>
-                        <td>11/06/2024</td>
-                        <td>7</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
+                        <td>35$</td>
                         <td>40$</td>
-                        <td>45$</td>
-                        <td>1.5</td>
+                        <td>2,5</td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>Cerveza</td>
-                        <td>24/03/2024</td>
-                        <td>10</td>
-                        <td>20$</td>
-                        <td>25$</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
                         <td>1.2</td>
+                        <td>35$</td>
+                        <td>40$</td>
+                        <td>2,5</td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>Vulcana</td>
-                        <td>25/10/2024</td>
-                        <td>5</td>
+                        <td>bebida</td>
+                        <td>2</td>
+                        <td>2.1</td>
+                        <td>-</td>
+                        <td>2</td>
+                        <td>1.2</td>
                         <td>35$</td>
-                        <td>45$</td>
-                        <td>1.4</td>
+                        <td>40$</td>
+                        <td>2,5</td>
                     </tr>
                 </tbody>
             </table>
