header colors added

--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <header>
+        <section>
+            
+        </section>
+        <nav>
 
+        </nav>
     </header>
     <main>
-        
+
     </main>
 </body>
 </html>
