--- a/src/layouts/Landing/Template/styles.css
+++ b/src/layouts/Landing/Template/styles.css
@@ -1,18 +1,31 @@
 :root{
-
+    --blue: #040C5D;
+    --white: #F8F7F2;
+    --black: #232326;
+    --cyan: #B1CEF4;
 }
 
 body{
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
 }
 
 header{
     position: fixed;
     width: 100dvw;
     height: 15dvh;
-    background-color: red;
+}
+
+header section{
+    width: 100dvw;
+    height: 10dvh;
+    background-color: var(--blue);
+}
+
+header nav{
+    width: 100dvw;
+    height: 5dvh;
+    background-color: var(--white);
 }
 
 main{
