Se termina la estructura html del main de la view Envios y se comienza el css

--- a/src/layouts/Gerente/Envios/Envios.html
+++ b/src/layouts/Gerente/Envios/Envios.html
@@ -32,5 +32,65 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="Content--page">
+            <div class="input--Container">
+                <input type="text">
+                <img alt="Lupa" src="">
+            </div>
+            <div class="Minorista--Mayorista">
+                <a href="">Minorista</a>
+                <a href="">Mayorista</a>
+            </div>
+        </div>
+        <div class="Table--Container">
+            <table>
+                <thead>
+                <tr>
+                    <th>Id</th>
+                    <th>Id__usuario</th>
+                    <th>Destino</th>
+                    <th>Fecha de compra</th>
+                    <th>Monto</th>
+                    <th>Fecha de entrega</th>
+                    <th>Id__factura</th>
+                    <th>Factura</th>
+                </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>1</td>
+                        <td>Naguanagua</td>
+                        <td>12/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>1</td>
+                        <td>Factura</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>2</td>
+                        <td>Naguanagua</td>
+                        <td>12/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>2</td>
+                        <td>Factura</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>3</td>
+                        <td>Naguanagua</td>
+                        <td>14/05/2024</td>
+                        <td>25.55$</td>
+                        <td>20/05/2024</td>
+                        <td>3</td>
+                        <td>Factura</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </main>
 </body>
 </html>
