--- a/src/layouts/Gerente/Inventario/estilo.css
+++ b/src/layouts/Gerente/Inventario/estilo.css
@@ -80,6 +80,7 @@ main{
     left: 185px;
     width: 80%;
     display: flex;
+    border-radius: 15px;
     box-shadow: 0 0 5px #000;
     border-radius: 10px;
     flex-flow: column wrap;
