Se agrega los estilos del div Content--page

--- a/src/layouts/Gerente/Envios/Envios.html
+++ b/src/layouts/Gerente/Envios/Envios.html
@@ -35,8 +35,8 @@
     <main>
         <div class="Content--page">
             <div class="input--Container">
-                <input type="text">
-                <img alt="Lupa" src="">
+                <input type="text" placeholder="00000">
+                <img alt="Lupa" src="../../../../public/images/icons/search.png">
             </div>
             <div class="Minorista--Mayorista">
                 <a href="">Minorista</a>
