--- a/src/layouts/Landing/Template/index.html
+++ b/src/layouts/Landing/Template/index.html
@@ -7,16 +7,34 @@
     <link rel="stylesheet" href="header.css">
 </head>
 <body>
+
     <header>
         <section>
             <img src="../../../../public/images/Logo/logo-landing.png">
+            <input type="search">
+            <section>
+                <img src="../../../../public/images/icons/store.svg">
+                <button>Iniciar sesión</button>
+            </section>
         </section>
         <nav>
-
+            <ul>
+                <li><a href=""></a>RON</li>
+                <li><a href=""></a>WHISKY</li>
+                <li><a href=""></a>VINOS</li>
+                <li><a href=""></a>SIDRA</li>
+                <li><a href=""></a>BRANDY</li>
+                <li><a href=""></a>VODKA</li>
+                <li><a href=""></a>SANGRIA</li>
+                <li><a href=""></a>ANIS</li>
+                <li><a href=""></a>AGUARDIENTE</li>
+            </ul>
         </nav>
     </header>
+
     <main>
 
     </main>
+
 </body>
 </html>
