Se termina la primera parte de los estilos del div Content--page no le va a gustar a lai pero bueno

--- a/src/layouts/Gerente/Envios/Envios.html
+++ b/src/layouts/Gerente/Envios/Envios.html
@@ -39,12 +39,18 @@
                 <img alt="Lupa" src="../../../../public/images/icons/search.png">
             </div>
             <div class="Minorista--Mayorista">
-                <a href="">Minorista</a>
-                <a href="">Mayorista</a>
+                <div class="Minorista">
+                    <a href="">Minorista</a>
+                </div>
+                <hr>
+                <div class="Mayorista">
+                    <a href="">Mayorista</a>
+                </div>
             </div>
         </div>
         <div class="Table--Container">
             <table>
+                <caption>Envios Minoristas</caption>
                 <thead>
                 <tr>
                     <th>Id</th>
