--- a/src/layouts/Gerente/Envios/estilo.css
+++ b/src/layouts/Gerente/Envios/estilo.css
@@ -79,7 +79,7 @@ main{
     width: 75%;
     border: 2px solid #000;
     position: absolute;
-    top: 155px;
+    top: 125px;
     left: 215px;
     padding: 10px;
     display: flex;
@@ -116,4 +116,39 @@ main .Content--page .input--Container img{
     width: 30px;
     position: relative;
     left: -45px;
+}
+main .Content--page .Minorista--Mayorista{
+    display: flex;
+    gap: 5px;
+    border: 2px solid #000;
+    padding: 10px;
+    border-radius: 25px;
+}
+main .Content--page .Minorista--Mayorista a{
+    font-size: 1em;
+    letter-spacing: 1px;
+    text-decoration: none;
+    padding: 2px;
+    color: var(--ColorNavigatorBar);
+    transition: .1s linear;
+}
+main .Content--page .Minorista--Mayorista .Minorista{
+    padding: 5px;
+}
+main .Content--page .Minorista--Mayorista .Minorista a{
+    background-color: var(--SecondaryColor);
+    color: var(--PrimaryColor);
+    padding: 5px;
+}
+main .Content--page .Minorista--Mayorista .Minorista a:hover{
+    border: 1px solid #000;
+    border-radius: 25px;
+    padding: 15px 15px;
+    margin-left: 0;
+    position: relative;
+    left: -15px;
+    font-weight: 500;
+}
+main .Content--page .Minorista--Mayorista .Mayorista{
+    padding: 5px;
 }
