Arreglando las rutas de las pgainas y las rutas de las imagenes en la view minorista-envios viva el frontend

--- a/src/layouts/Gerente/Avisos/Avisos.html
+++ b/src/layouts/Gerente/Avisos/Avisos.html
@@ -23,7 +23,7 @@
                 <a href="../Proveedor/Proveedor.html" class="Link">
                     <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
                 </a>
-                <a href="../Envios/Envios.html" class="Link">
+                <a href="../Envios/Minorista/Minorista.html" class="Link">
                     <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
                 </a>
                 <a href="../Main/Main.html" class="Link">
