--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -9,25 +9,25 @@
 <body>
     <header>
         <div class="Content__header">
-            <img alt="Logo" src="../../../../public/images/Logo/Logo.png">
+            <img alt="Logo" src="../../../../../public/images/Logo/Logo.png">
             <a href="#">Salir</a>
         </div>
         <nav class="Navigator--bar">
             <ul class="Navigator--bar List">
-                <a href="../Inventario/Inventario.html" class="Link">
-                    <Li class="List--cont"><img alt="Inventario" src="../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
+                <a href="../../Inventario/Inventario.html" class="Link">
+                    <Li class="List--cont"><img alt="Inventario" src="../../../../../public/images/icons/Inventario.png" title="Inventario"></Li>
                 </a>
-                <a href="../Estadistica/Estadistica.html" class="Link">
-                    <Li class="List--cont"><img alt="Estadistica" src="../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
+                <a href="../../Estadistica/Estadistica.html" class="Link">
+                    <Li class="List--cont"><img alt="Estadistica" src="../../../../../public/images/icons/Estadistica.png" title="Estadistica"></Li>
                 </a>
-                <a href="../Proveedor/Proveedor.html" class="Link">
-                    <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
+                <a href="../../Proveedor/Proveedor.html" class="Link">
+                    <Li class="List--cont"><img alt="Proveedores" src="../../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
                 </a>
-                <a href="../Main/Main.html" class="Link">
-                    <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Home.png" title="Envios/pedidos"></Li>
+                <a href="../../Main/Main.html" class="Link">
+                    <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../../public/images/icons/Home.png" title="Envios/pedidos"></Li>
                 </a>
                 <a href="../Avisos/Avisos.html" class="Link">
-                    <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
+                    <Li class="List--cont"><img alt="Avisos" src="../../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
         </nav>
@@ -36,15 +36,15 @@
         <div class="Content--page">
             <div class="input--Container">
                 <input type="text" placeholder="00000">
-                <img alt="Lupa" src="../../../../public/images/icons/search.png">
+                <img alt="Lupa" src="../../../../../public/images/icons/search.png">
             </div>
             <div class="Minorista--Mayorista">
                 <div class="Minorista">
-                    <a href="">Minorista</a>
+                    <span>Minorista</span>
                 </div>
                 <hr>
                 <div class="Mayorista">
-                    <a href="">Mayorista</a>
+                    <a href="../Mayorista/Mayorista.html">Mayorista</a>
                 </div>
             </div>
         </div>
