--- a/src/layouts/Gerente/Estadistica/Estadistica.html
+++ b/src/layouts/Gerente/Estadistica/Estadistica.html
@@ -26,7 +26,7 @@
                 <a href="../Envios/Envios.html" class="Link">
                     <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
                 </a>
-                <a href="../Envios/Envios.html" class="Link">
+                <a href="../Avisos/Avisos.html" class="Link">
                     <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
