--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -23,10 +23,10 @@
                 <a href="../Proveedor/Proveedor.html" class="Link">
                     <Li class="List--cont"><img alt="Proveedores" src="../../../../public/images/icons/proveedor.png" title="Proveedores"></Li>
                 </a>
-                <a href="../Envios/Envios.html" class="Link">
+                <a href="../Envios/Minorista/Minorista.html" class="Link">
                     <Li class="List--cont"><img alt="Envios/pedidos" src="../../../../public/images/icons/Envios.png" title="Envios/pedidos"></Li>
                 </a>
-                <a href="../Envios/Envios.html" class="Link">
+                <a href="../Avisos/Avisos.html" class="Link">
                     <Li class="List--cont"><img alt="Avisos" src="../../../../public/images/icons/Reporte.png" title="Avisos"></Li>
                 </a>
             </ul>
