Acomode la sematica de las views y termine la estructura HTML de la view de los proveedores

--- a/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
+++ b/src/layouts/Gerente/Envios/Mayorista/Mayorista.html
@@ -35,7 +35,7 @@
     <main>
         <div class="Content--page">
             <div class="input--Container">
-                <input type="text" placeholder="00000">
+                <input type="search" placeholder="00000">
                 <img alt="Lupa" src="../../../../../public/images/icons/search.png">
             </div>
             <div class="Minorista--Mayorista">
