--- a/src/layouts/Gerente/Envios/Minorista/Minorista.html
+++ b/src/layouts/Gerente/Envios/Minorista/Minorista.html
@@ -33,22 +33,22 @@
         </nav>
     </header>
     <main>
-        <div class="Content--page">
-            <div class="input--Container">
-                <input type="text" placeholder="00000">
+        <section class="Content--page">
+            <article class="input--Container">
+                <input type="search" placeholder="00000">
                 <img alt="Lupa" src="../../../../../public/images/icons/search.png">
-            </div>
-            <div class="Minorista--Mayorista">
-                <div class="Minorista">
+            </article>
+            <article class="Minorista--Mayorista">
+                <article class="Minorista">
                     <span>Minorista</span>
-                </div>
+                </article>
                 <hr>
-                <div class="Mayorista">
+                <article class="Mayorista">
                     <a href="../Mayorista/Mayorista.html">Mayorista</a>
-                </div>
-            </div>
-        </div>
-        <div class="Table--Container">
+                </article>
+            </article>
+        </section>
+        <section class="Table--Container">
             <table>
                 <caption>Envios Minoristas</caption>
                 <thead>
@@ -96,7 +96,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </section>
     </main>
 </body>
 </html>
