--- a/src/layouts/Gerente/Inventario/Inventario.html
+++ b/src/layouts/Gerente/Inventario/Inventario.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <div class="Content">
+        <section class="Content">
             <form class="Inputs--seleccionados">
                 <div class="Input--Container">
                     <input type="search" placeholder="Buscar producto">
@@ -48,13 +48,13 @@
                     </select>
                 </div>
             </form>
-            <div class="icon">
+            <article class="icon">
                 <img src="../../../../public/images/icons/delete.png" alt="Eliminar">
                 <img src="../../../../public/images/icons/pencil.png" alt="Modificar">
                 <img src="../../../../public/images/icons/add.png" alt="Añadir">
-            </div>
-        </div>
-        <div class="Table--inventario">
+            </article>
+        </section>
+        <section class="Table--inventario">
             <table>
                 <caption>Inventario de Bodega</caption>
                 <thead>
@@ -127,7 +127,7 @@
                     </tr>
                 </tbody>
             </table>
-        </div>
+        </section>
     </main>
 </body>
 </html>
