--- a/src/layouts/Gerente/Proveedor/Proveedor.html
+++ b/src/layouts/Gerente/Proveedor/Proveedor.html
@@ -32,5 +32,86 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="Content">
+            <section class="Info--Proveedor">
+                <h1>Vista de proveedor</h1>
+                <article class="Nombre--proveedor">
+                    <span>José</span>
+                    <h3>Santa Teresa</h3>
+                </article>
+                <article class="Tlf--proveedor">
+                    <span>Telefono del proveedor</span>
+                    <h3>0414-4204521</h3>
+                </article>
+                <article class="Ubi--proveedor">
+                    <span>Ubicación</span>
+                    <h3>Trigal</h3>
+                </article>
+                <article class="Rif--proveedor">
+                    <span>RIF</span>
+                    <h3>V-316088291</h3>
+                </article>
+                <article class="Icon--proveedor">
+                    <img src="" alt="Agregar">
+                    <img src="" alt="Eliminar">
+                    <img src="" alt="Modificar">
+                </article>
+            </section>
+            <section class="Input--Container">
+                <input type="search" placeholder="Busacar proveedor">
+                <img src="" alt="Lupa">
+            </section>
+            <section class="Table--Container">
+                <table>
+                    <caption>Lista de Proveedores</caption>
+                    <thead>
+                        <tr>
+                            <th>Id</th>
+                            <th>Nombre del Proveedor</th>
+                            <th>Telefono del Proveedor</th>
+                            <th>RIF</th>
+                            <th>Ubicación</th>
+                            <th>Fecha de Compra</th>
+                            <th>Fecha de Entrega</th>
+                            <th>USER</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Carlos</td>
+                            <td>0412-3546112</td>
+                            <td>V-284567681</td>
+                            <td>Naguanagua</td>
+                            <td>12/03/2024</td>
+                            <td>20/03/2024</td>
+                            <td>Jose</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Carlos</td>
+                            <td>0412-3546112</td>
+                            <td>V-284567681</td>
+                            <td>Naguanagua</td>
+                            <td>12/03/2024</td>
+                            <td>20/03/2024</td>
+                            <td>Jose</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Carlos</td>
+                            <td>0412-3546112</td>
+                            <td>V-284567681</td>
+                            <td>Naguanagua</td>
+                            <td>12/03/2024</td>
+                            <td>20/03/2024</td>
+                            <td>Jose</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
