--- a/src/layouts/Gerente/Proveedor/estilo.css
+++ b/src/layouts/Gerente/Proveedor/estilo.css
@@ -75,3 +75,11 @@ header .List img:hover{
     outline: 2px solid var(--PrimaryColor);
     padding: 5px 5px;
 }
+main{
+    position: absolute;
+    top: 125px;
+    left: 155px;
+    border: 2px solid #000;
+    width: 85%;
+    padding: 10px;
+}
