Se comienza el estilo del article info--proveedor ya lo voy a terminar

--- a/src/layouts/Gerente/Proveedor/Proveedor.html
+++ b/src/layouts/Gerente/Proveedor/Proveedor.html
@@ -37,7 +37,7 @@
             <section class="Info--Proveedor">
                 <h1>Vista de proveedor</h1>
                 <article class="Nombre--proveedor">
-                    <span>José</span>
+                    <span>Nombre del Proveedor</span>
                     <h3>Santa Teresa</h3>
                 </article>
                 <article class="Tlf--proveedor">
@@ -53,9 +53,9 @@
                     <h3>V-316088291</h3>
                 </article>
                 <article class="Icon--proveedor">
-                    <img src="" alt="Agregar">
-                    <img src="" alt="Eliminar">
-                    <img src="" alt="Modificar">
+                    <img src="../../../../public/images/icons/add.png" alt="Agregar" title="Agregar proveedor">
+                    <img src="../../../../public/images/icons/delete.png" alt="Eliminar" title="Eliminar proveedor">
+                    <img src="../../../../public/images/icons/pencil.png" alt="Modificar" title="Modificar proveedor">
                 </article>
             </section>
             <section class="Input--Container">
